Add further instructions related to GUIs.